# gently-communicating-home-using-Matter

./: README.md
bridge/: CMakeLists.txt  Kconfig  README.rst  __pm_static_nrf7002dk_nrf5340_cpuapp.yml  overlay-credentials.conf  pm_static_nrf7002dk_nrf5340_cpuapp.yml  pm_static_ssci_mdbt53_dev_board_cpuapp.yml  prj.conf  sample.yaml
bridge/boards/: nrf7002dk_nrf5340_cpuapp.overlay  ssci_mdbt53_dev_board_cpuapp.conf  ssci_mdbt53_dev_board_cpuapp.overlay
bridge/child_image/hci_rpmsg/boards/: nrf7002dk_nrf5340_cpunet.conf
bridge/child_image/mcuboot/boards/: nrf7002dk_nrf5340_cpuapp.conf  ssci_mdbt53_dev_board_cpuapp.conf  ssci_mdbt53_dev_board_cpuapp.overlay
bridge/child_image/multiprotocol_rpmsg/boards/: ssci_mdbt53_dev_board_cpunet.conf  ssci_mdbt53_dev_board_cpunet.overlay
bridge/doc/: 03_create_documentation.sh  makeItMatter.drawio  sequenceBridge.plantuml  sequenceOverall.plantuml
bridge/src/: app_config.h  app_event.h  app_task.cpp  app_task.h  bridge_shell.cpp  chip_project_config.h  display.c  display.h  main.cpp  util.cpp  util.h
bridge/src/bridge/: ble_connectivity_manager.cpp  ble_connectivity_manager.h  ble_device.cpp  ble_device.h  bridge_manager.cpp  bridge_manager.h  config.inc  matter_device.cpp  matter_device.h  matter_device_ble.cpp  matter_device_ble.h  matter_device_fixed.cpp  matter_device_fixed.h  oob_exchange_manager.cpp  oob_exchange_manager.h  oob_transport_uart.cpp  oob_transport_uart.h
bridge/src/reminders/: recorder.c  recorder.h  reminder.c  reminder.h  reminders_app.c  reminders_app.h
bridge/src/reminders/ai/: completions.c  completions.h  definitions.h  socket_common.c  socket_common.h  whisper.c  whisper.h
bridge/src/reminders/persistence/: persistence.c  persistence.h
bridge/src/uart/: nfc_uart.cpp  nfc_uart.h
bridge/src/usb/: usb.cpp  usb.h
feedbackLight/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
feedbackLight/boards/: adafruit_feather_nrf52840.overlay  xiao_ble_sense.overlay
feedbackLight/child_image/mcuboot/boards/: adafruit_feather_nrf52840.overlay  xiao_ble_sense.overlay
feedbackLight/doc/: 03_create_documentation.sh  sequenceFeedbacklight.plantuml
feedbackLight/src/: app_config.h  app_event.h  app_task.cpp  app_task.h  feedback_light.zap  led_strip.cpp  led_strip.h  zcl_callbacks.cpp
feedbackLight/src/zap-generated/: IMClusterCommandHandler.cpp  PluginApplicationCallbacks.h  callback-stub.cpp  endpoint_config.h  gen_config.h
matterRepl/: GentlyCommunicatingHome.ipynb
pico-nfc-usb/: CMakeLists.txt  clone_ext_dependencies.sh
pico-nfc-usb/nfc_usb/: CMakeLists.txt  logging.c  logging.h  main.c  nfc_helper.c  nfc_helper.h  nfc_task.c  nfc_task.h  tusb_config.h  uart_task.c  uart_task.h  usb_comm.c  usb_comm.h  usb_descriptors_print.c  usb_descriptors_print.h
postureChecker/: CMakeLists.txt  Kconfig  Kconfig.bt  Kconfig.ei  Kconfig.flash  README.rst  overlay-credentials.conf  prj.conf  sample.yaml  strictdoc.toml
postureChecker/boards/: xiao_ble_sense.overlay
postureChecker/config/: memfault_metrics_heartbeat_config.def  memfault_platform_config.h  memfault_trace_reason_user_config.def
postureChecker/doc/00_requirements/: Memo  PostureChecker.sdoc
postureChecker/doc/01_diagrams/: sequenceDiagram.plantuml
postureChecker/scripts/: 00_ble_convert_nus_to_uart.py  00_config_credentials.sh  00_prepare.sh  01_flash_xiao_ble.sh  02_create_documentation.sh  requirements.txt
postureChecker/src/: bt.c  bt.h  ei_data_forwarder.c  ei_data_forwarder.h  main.cpp  shell_commands.cpp  simulation_data.cpp
postureChecker/src/bluetooth/services/: postureCheckerService.c  postureCheckerService.h  timeService.c  timeService.h
postureChecker/src/nfc/: nfc.c  nfc.h
postureChecker/src/persistence/: persistence.cpp  persistence.h
postureChecker/src/sensors/: sensorAggregator.cpp  sensorAggregator.h  sensorBno08x.cpp  sensorBno08x.h  sensorDataDefinition.h  sensorFlex.cpp  sensorFlex.h  sensorInterface.h  sensorLsm6dsl.cpp  sensorLsm6dsl.h
postureChecker/src/sensors/driver/: bno08x.c  bno08x.h  sh2_hal.c
postureChecker/src/uart/: uart.c
postureChecker/src/usb/: usb.c  usb.h
pythonScripting/matterRepl/: GentlyCommunicatingHome.ipynb
pythonScripting/python-matter-server/: client_commission.py  client_forwardPostureScore.py  client_openWindow.py  start_server.py
reminderGenerativeAI/: CMakeLists.txt  Kconfig  Kconfig.net  README.rst  overlay-credentials.conf  overlay-usb-nrf-br.conf  overlay-wifi.conf  prj.conf  sample.yaml
reminderGenerativeAI/boards/: nrf7002dk_nrf5340_cpuapp.conf  nrf7002dk_nrf5340_cpuapp.overlay
reminderGenerativeAI/src/: button.c  button.h  main.c  recorder.c  recorder.h  reminder.c  reminder.h  until.c
reminderGenerativeAI/src/ai/: ca_certificate.h  completions.c  completions.h  images.c  socket_common.c  socket_common.h  whisper.c  whisper.h
reminderGenerativeAI/src/net/wifi/: wifi.c
reminderGenerativeAI/src/persistence/: persistence.c  persistence.h
